# defender

./: .gitignore  CMakeLists.txt  makefile  makefile.macos  readme.md  readme.txt
assets/: ground.pgm
include/: debug.h  definitions.h  exec.h  exec.hpp  graphics.h  types.h  units.hpp  world.h
src/exec/: events.cpp  global.c  init.c  main.c  main.cpp  random.cpp  units-wrapper.cpp
src/graphics/: engine.c  hooks.c  map.c  materials.c  movement.c  pgm.c
src/units/: _unit.cpp  human.cpp  lander.cpp
src/world/: pgm.c  units.c
tests/: test_pgm.c  test_terrain.c
